# haskell_workshop

./: Makefile  README.md  index.html
resources/css/: fonts.css  styles.css  toc.css
resources/html/: footer.html
resources/javascript/: collapse.js  sum_times.js
resources/markdown/: ADTs.md  Algebra.md  Appendix.md  Compression.md  Introduction.md  Laziness.md  Lunch.md  Moar.md  Monads.md  Music.md  PostMortem.md  Setup.md  TOC.md  Testing.md  Type-Classes.md  Types.md  Web-Site.md  Welcome.md
resources/scripts/: wrapchapters.sh
scaffold/compression/: Makefile  compression.cabal  compression.hs  compression_stats.hs  decompression.hs
scaffold/compression/Text/Compression/: Simple.hs
scaffold/midi/: BaaBaa.hs  Midi.hs  baaBaa.mid  midi.cabal
scaffold/website/: website.cabal  website.hs
