
name:                website
version:             0.1.0.0
synopsis:            Best Website
homepage:            https://github.com/sordina/haskell_workshop
author:              Lyndon Maydwell
maintainer:          lyndon@sordina.net
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable website
  main-is: website.hs
  build-depends:       base >=4.6 && <4.7, transformers >= 0.3, scotty >= 0.4
  default-language:    Haskell2010
